# manager

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  eslint.config.mjs  manager.code-workspace  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build.yml
app/: .npmrc  .prettierrc.yaml  README.md  components.json  electron-builder.yml  electron.vite.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.node.json  tsconfig.web.json
app/src/helpers/: authentication.helper.ts  index.ts
app/src/main/: deep-link.ts  index.ts  store.ts
app/src/preload/: i18n.ts  index.d.ts  index.ts  internationalization.ts
app/src/renderer/: index.html
app/src/types/: base.d.ts  index.d.ts
apps/desktop/: CHANGELOG.md  app-info.ts  components.json  dist-info.ts  drizzle.config.ts  electron-builder.yml  electron.vite.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.eslint.json  tsconfig.json  tsconfig.node.json  tsconfig.web.json  tsr.config.json
apps/desktop/migrations/: 0001_greedy_shriek.sql  0002_wild_harry_osborn.sql  0003_unknown_mandroid.sql  0004_gray_maelstrom.sql  0005_many_wildside.sql  0006_blushing_madrox.sql  0007_wide_catseye.sql  (+3 more)
crates/system/: Cargo.toml  build.rs
crates/system/src/: main.rs
crates/system/src/data/: nmap-service-probes
crates/system/src/networking/: mod.rs  windows.rs
crates/system/src/proto/: network.proto  system.proto
crates/system/src/services/: file_space.rs  images.rs  mod.rs  network.rs
crates/system/src/services/network/: mod.rs  network.rs  service_probe.rs
libs/common/: README.md  package.json  tsconfig.json
libs/eslint/: package.json  pnpm-lock.yaml
libs/ui/: README.md  index.ts  package.json  pnpm-lock.yaml  tsconfig.json
server/: .env  .env.example  docker-compose.yml  drizzle.config.ts  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.release.json
server/src/: data-source.ts  index.ts
shared/: package.json  pnpm-lock.yaml  tsconfig.json
shared/constants/: index.ts
shared/helpers/: authentication.helper.ts
shared/locales/: en.json  no.json
shared/types/: common.ts  communication.ts  google.d.ts  i18n.ts  ipc.ts  users.ts
(+416 files in other folders)
