[package]
name = "system"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
futures = "0.3.31"
ico = "0.4.0"
image = "0.25.6"
interprocess = "2.2.3"
lru = "0.14.0"
once_cell = "1.21.3"
prost = "0.13.5"
prost-types = "0.13.5"
rayon = "1.10.0"
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = "0.1.17"
tonic = { version = "0.13.1", features = ["transport"] }
walkdir = "2.5.0"
zip = "4.0.0"

[target.'cfg(windows)'.dependencies]
tokio = { version = "1.45.1", features = ["full"] }
tokio-named-pipes = { git = "https://github.com/NikVolf/tokio-named-pipes", branch = "stable" }

[build-dependencies]
tonic-build = "0.13.1"
